--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@geist-ui/core": "^2.3.8",
     "@netlify/plugin-nextjs": "^4.41.1",
     "@opentelemetry/api": "^1.6.0",
     "contentlayer": "^0.3.4",
