--- a/package.json
+++ b/package.json
@@ -12,12 +12,32 @@
     "@geist-ui/core": "^2.3.8",
     "@netlify/plugin-nextjs": "^4.41.1",
     "@opentelemetry/api": "^1.6.0",
+    "@tabler/icons-react": "^2.40.0",
+    "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/typography": "^0.5.10",
+    "clsx": "^2.0.0",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.4",
+    "github-slugger": "^2.0.0",
+    "headings-resolver": "link:@/plugin/headings-resolver",
     "next": "13.5.4",
     "next-contentlayer": "^0.3.4",
+    "pliny": "^0.1.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
+    "rehype-autolink-headings": "^7.0.0",
+    "rehype-citation": "^2.0.0",
+    "rehype-katex": "^7.0.0",
+    "rehype-preset-minify": "^7.0.0",
+    "rehype-pretty-code": "^0.10.2",
+    "rehype-prism-plus": "^1.6.3",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
+    "shiki": "^0.14.5"
   },
   "devDependencies": {
     "@types/node": "^20",
