--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
-    "shiki": "^0.14.5"
+    "shiki": "^0.14.5",
+    "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
     "@types/node": "^20",
